# multilang-rag-with-frontend

./: Multilingual_embedding_pipeline.ipynb  Multilingual_retriever_pipeline.ipynb  README.md  main.py  pyproject.toml  requirements.txt
backend/: .env  modeldownload.ipynb  server.py  simple_api_test.py
frontend/: backupscipt.js  index.html  script.js  style.css
